# pathl

./: .gitignore  .main.py.swp  README.md  block_int.py  block_print.py  build.md  compilator.py  main.py  makefile  new_build.md  pathl.py  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml
pathl/: __init__.py  ctf.py
pathl/_native/: core.c
pathl/cli/: db.py
pathl/crypto/: rsa.py
pathl/ctfs/1/: Dockerfile  ctf.json  flag.txt
pathl/ctfs/2/: ctf.json  kasia.pcapng  main.py
pathl/ctfs/4/: start.sh
pathl/database/: db.py
pathl/hello/: world.py
scripts/: build.sh
