[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pathl"
version = "0.1.1a2"
description = "Pathl - biblioteka ogólnego przeznaczenia"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Alicja", email = "alicjajett@gmail.com"},
]
maintainers = [
    {name = "Alicja", email = "alicjajett@gmail.com"}
]
dependencies = [
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "cibuildwheel>=2.16.0",
    "flask"
]
cli = ["click>=8.0.0"]
gui = []

[project.urls]
Homepage = "https://github.com/AlicjaPathl/pathl"
Repository = "https://github.com/AlicjaPathl/pathl.git"
"Bug Tracker" = "https://github.com/AlicjaPathl/pathl/issues"

[project.scripts]
pathl = "pathl.cli.main:main"
db = "pathl.cli.db:main"
ctf = "pathl.ctf:main"
# Konfiguracja setuptools - szukamy pakietów w katalogu pathl
[tool.setuptools.packages.find]
where = ["."]
include = ["pathl*", "pathl.*"]

# --- Rozszerzenie C ---
# setuptools >=61 wspiera ext_modules tylko przez setup.py lub przez
# [tool.setuptools] w połączeniu z osobnym plikiem build (patrz setup.py niżej,
# potrzebny WYŁĄCZNIE do zdefiniowania modułu C - reszta metadanych zostaje w pyproject.toml)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 88
[tool.setuptools.package-data]
pathl = ["*.pcap", "*.db", "data/*.pcap", "data/*.db"]
# --- Konfiguracja cibuildwheel (cross-build Linux + Windows) ---
[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-* cp311-* cp312-*"
skip = "*-musllinux* pp*"
build-verbosity = 1

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]